--- a/themes/hugo-initio/layouts/partials/recentworks.html
+++ b/themes/hugo-initio/layouts/partials/recentworks.html
@@ -1,6 +1,6 @@
 <div class="row section featured topspace">
 
-    <h2 class="section-title"><span>Papers</span></h2>
+    <h2 class="section-title"><span>Publications</span></h2>
 
     <div class="">
         {{ range where .Data.Pages.ByDate "Section" "papers" }}
